--- a/statistics.html
+++ b/statistics.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,117 +8,134 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary-color: #2196f3;
-            --secondary-color: #1e88e5;
-            --background-dark: #121212;
-            --card-background: #1e1e1e;
-            --card-hover: #252525;
+            --primary-color: #6c5ce7;
+            --secondary-color: #a29bfe;
+            --background-dark: #0f0f13;
+            --card-bg: #1a1a23;
+            --card-hover: #22222c;
             --text-primary: #ffffff;
-            --text-secondary: #b3b3b3;
-            --success-gradient: linear-gradient(135deg, #00b09b, #96c93d);
-            --danger-gradient: linear-gradient(135deg, #ff416c, #ff4b2b);
-            --gold-color: #ffd700;
-            --border-color: rgba(255, 255, 255, 0.1);
-            --neon-green: #00ff00;
+            --text-secondary: #a0a0a0;
+            --accent-color: #00ff88;
+            --danger-color: #ff5252;
+            --success-color: #00ff88;
+            --border-color: rgba(255, 255, 255, 0.05);
+            --gold-gradient: linear-gradient(135deg, #ffd700, #ffa500);
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--background-dark);
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, var(--background-dark) 0%, #16161f 100%);
             color: var(--text-primary);
-            margin: 0;
-            padding: 30px;
             min-height: 100vh;
             line-height: 1.6;
+            padding: 20px;
         }
 
         .logo-container {
             text-align: center;
             margin: 20px 0;
             padding: 20px;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .logo {
-            width: 150px;
+            width: 120px;
             height: auto;
             margin-bottom: 15px;
-            animation: glow 2s ease-in-out infinite alternate;
+            filter: drop-shadow(0 0 10px rgba(108, 92, 231, 0.5));
+            transition: all 0.3s ease;
+        }
+
+        .logo:hover {
+            transform: scale(1.05);
+            filter: drop-shadow(0 0 15px rgba(108, 92, 231, 0.7));
         }
 
         .logo-text {
-            font-size: 2rem;
-            color: var(--neon-green);
-            text-shadow: 0 0 10px rgba(0, 255, 0, 0.7);
-            margin: 10px 0;
-            font-family: Arial, sans-serif;
-            letter-spacing: 2px;
-        }
-
-        @keyframes glow {
-            from {
-                filter: drop-shadow(0 0 5px rgba(0, 255, 0, 0.7));
-            }
-            to {
-                filter: drop-shadow(0 0 20px rgba(0, 255, 0, 0.9));
-            }
-        }
-
-        h1 {
-            text-align: center;
-            color: var(--primary-color);
-            margin-bottom: 30px;
-            font-size: 2.5rem;
+            font-size: 1.8rem;
+            background: linear-gradient(45deg, #00ff88, #00ffaa);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
             font-weight: 700;
-            text-transform: uppercase;
             letter-spacing: 2px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+            margin-top: 10px;
+            text-shadow: 0 0 10px rgba(0, 255, 136, 0.5);
+            animation: neonPulse 1.5s ease-in-out infinite alternate;
+        }
+
+        @keyframes neonPulse {
+            from {
+                text-shadow: 0 0 10px rgba(0, 255, 136, 0.5),
+                    0 0 20px rgba(0, 255, 136, 0.3);
+            }
+
+            to {
+                text-shadow: 0 0 15px rgba(0, 255, 136, 0.7),
+                    0 0 25px rgba(0, 255, 136, 0.5);
+            }
         }
 
         .button-container {
             display: flex;
             gap: 20px;
             justify-content: center;
-            margin-bottom: 30px;
+            margin: 30px 0;
+            animation: fadeIn 1s ease-in-out 0.3s backwards;
         }
 
         .action-button {
             padding: 15px 35px;
             font-size: 16px;
             font-weight: 600;
-            color: #000;
-            background: linear-gradient(135deg, var(--primary-color) 0%, var(--secondary-color) 100%);
+            color: var(--text-primary);
+            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
             border: none;
-            border-radius: 25px;
+            border-radius: 12px;
             cursor: pointer;
             transition: all 0.3s ease;
             text-transform: uppercase;
             letter-spacing: 1px;
-            box-shadow: 0 4px 15px rgba(33, 150, 243, 0.3);
+            box-shadow: 0 4px 15px rgba(108, 92, 231, 0.3);
         }
 
         .action-button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(33, 150, 243, 0.4);
+            box-shadow: 0 6px 20px rgba(108, 92, 231, 0.4);
         }
 
         .leagues-container {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
             gap: 25px;
             padding: 20px;
             max-width: 1400px;
             margin: 0 auto;
+            animation: fadeIn 1s ease-in-out 0.6s backwards;
         }
 
         .league-stats {
-            background: linear-gradient(145deg, var(--card-background), var(--card-hover));
-            border-radius: 15px;
+            background: linear-gradient(145deg, var(--card-bg), var(--card-hover));
+            border-radius: 16px;
             padding: 25px;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
             border: 1px solid var(--border-color);
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
+            backdrop-filter: blur(10px);
         }
 
         .league-stats:hover {
@@ -126,7 +144,9 @@
         }
 
         .highlight {
-            border: 2px solid var(--gold-color);
+            border: 2px solid transparent;
+            background: linear-gradient(var(--card-bg), var(--card-bg)) padding-box,
+                var(--gold-gradient) border-box;
             box-shadow: 0 0 20px rgba(255, 215, 0, 0.2);
         }
 
@@ -135,7 +155,10 @@
             font-size: 1.2rem;
             margin-bottom: 20px;
             text-align: center;
-            color: var(--primary-color);
+            background: linear-gradient(45deg, var(--primary-color), var(--accent-color));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
             text-transform: uppercase;
             letter-spacing: 1px;
             padding-bottom: 15px;
@@ -143,31 +166,60 @@
         }
 
         .stat {
-            margin: 12px 0;
+            margin: 15px 0;
             font-size: 0.9rem;
             color: var(--text-secondary);
             display: flex;
             justify-content: space-between;
             align-items: center;
+            padding: 5px 10px;
+            border-radius: 8px;
+            background: rgba(255, 255, 255, 0.03);
+            transition: all 0.3s ease;
+        }
+
+        .stat:hover {
+            background: rgba(255, 255, 255, 0.05);
+            transform: translateX(5px);
         }
 
         .bar-container {
-            background-color: rgba(255, 255, 255, 0.1);
+            background-color: rgba(255, 255, 255, 0.05);
             border-radius: 10px;
             overflow: hidden;
             margin: 8px 0;
             height: 8px;
+            position: relative;
         }
 
         .bar {
             height: 100%;
             border-radius: 10px;
-            background: var(--success-gradient);
-            transition: width 0.3s ease;
+            background: linear-gradient(90deg, var(--accent-color), var(--primary-color));
+            transition: width 0.6s ease-in-out;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .bar::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            animation: shimmer 2s infinite;
         }
 
         .bar.zero {
-            background: var(--danger-gradient);
+            background: linear-gradient(90deg, var(--danger-color), #ff7675);
+        }
+
+        @keyframes shimmer {
+            100% {
+                left: 100%;
+            }
         }
 
         .star {
@@ -175,23 +227,36 @@
             top: 15px;
             right: 15px;
             font-size: 24px;
-            color: var(--gold-color);
-            animation: pulse 2s infinite;
+            color: transparent;
+            background: var(--gold-gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            animation: starPulse 2s infinite;
+            filter: drop-shadow(0 0 5px rgba(255, 215, 0, 0.5));
         }
 
-        @keyframes pulse {
-            0% { transform: scale(1); }
-            50% { transform: scale(1.2); }
-            100% { transform: scale(1); }
+        @keyframes starPulse {
+            0% {
+                transform: scale(1) rotate(0deg);
+            }
+
+            50% {
+                transform: scale(1.2) rotate(180deg);
+            }
+
+            100% {
+                transform: scale(1) rotate(360deg);
+            }
         }
 
         @media (max-width: 768px) {
             body {
-                padding: 15px;
+                padding: 10px;
             }
 
             .button-container {
                 flex-direction: column;
+                padding: 0 20px;
             }
 
             .leagues-container {
@@ -199,12 +264,17 @@
                 padding: 10px;
             }
 
+            .action-button {
+                width: 100%;
+            }
+
             h1 {
-                font-size: 2rem;
+                font-size: 1.8rem;
             }
         }
     </style>
 </head>
+
 <body>
     <div class="logo-container">
         <img src="https://i.ibb.co/v6MhLNJX/11zon-cropped.png" alt="RW Tips Logo" class="logo">
@@ -219,12 +289,12 @@
     <div id="statsContainer" class="leagues-container"></div>
 
     <script>
-        document.getElementById('viewResultsButton').addEventListener('click', function() {
+        document.getElementById('viewResultsButton').addEventListener('click', function () {
             localStorage.setItem('needsUpdate', 'true');
             window.location.href = 'results.html';
         });
 
-        document.getElementById('backButton').addEventListener('click', function() {
+        document.getElementById('backButton').addEventListener('click', function () {
             localStorage.setItem('needsUpdate', 'true');
             window.location.href = 'visualization.html';
         });
@@ -247,10 +317,10 @@
                 for (const league in leagues) {
                     const leagueStats = calculateStats(leagues[league]);
                     const isStarred = leagueStats['Over 1.5'] === 100 &&
-                                    leagueStats['Over 2.5'] === 100 &&
-                                    leagueStats['Over 3.5'] >= 85 &&
-                                    leagueStats['Ambos Marcam'] >= 85 &&
-                                    leagueStats['0x0'] === 0;
+                        leagueStats['Over 2.5'] === 100 &&
+                        leagueStats['Over 3.5'] >= 85 &&
+                        leagueStats['Ambos Marcam'] >= 85 &&
+                        leagueStats['0x0'] === 0;
                     const star = isStarred ? '<div class="star">⭐</div>' : '';
                     const highlightClass = isStarred ? 'highlight' : '';
                     const leagueDiv = document.createElement('div');
@@ -319,4 +389,5 @@
         }
     </script>
 </body>
+
 </html>
