--- a/statistics.html
+++ b/statistics.html
@@ -144,10 +144,41 @@
         }
 
         .highlight {
-            border: 2px solid transparent;
-            background: linear-gradient(var(--card-bg), var(--card-bg)) padding-box,
-                var(--gold-gradient) border-box;
-            box-shadow: 0 0 20px rgba(255, 215, 0, 0.2);
+            border: none;
+            position: relative;
+            background: linear-gradient(145deg, var(--card-bg), var(--card-hover));
+            box-shadow: 0 0 30px rgba(255, 215, 0, 0.15);
+            animation: cardGlow 2s infinite alternate;
+        }
+
+        .highlight::before {
+            content: '';
+            position: absolute;
+            inset: -2px;
+            background: var(--gold-gradient);
+            border-radius: 18px;
+            z-index: -1;
+            animation: borderRotate 4s linear infinite;
+        }
+
+        @keyframes cardGlow {
+            from {
+                box-shadow: 0 0 30px rgba(255, 215, 0, 0.15);
+            }
+
+            to {
+                box-shadow: 0 0 50px rgba(255, 215, 0, 0.3);
+            }
+        }
+
+        @keyframes borderRotate {
+            from {
+                filter: hue-rotate(0deg);
+            }
+
+            to {
+                filter: hue-rotate(360deg);
+            }
         }
 
         .league-name {
@@ -226,13 +257,13 @@
             position: absolute;
             top: 15px;
             right: 15px;
-            font-size: 24px;
+            font-size: 28px;
             color: transparent;
             background: var(--gold-gradient);
             -webkit-background-clip: text;
             background-clip: text;
             animation: starPulse 2s infinite;
-            filter: drop-shadow(0 0 5px rgba(255, 215, 0, 0.5));
+            filter: drop-shadow(0 0 8px rgba(255, 215, 0, 0.6));
         }
 
         @keyframes starPulse {
@@ -247,6 +278,73 @@
             100% {
                 transform: scale(1) rotate(360deg);
             }
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin: 30px 0;
+            background: linear-gradient(45deg, var(--accent-color), var(--primary-color));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            text-transform: uppercase;
+            letter-spacing: 3px;
+            position: relative;
+            display: inline-block;
+            left: 50%;
+            transform: translateX(-50%);
+            padding: 0 20px;
+            text-shadow: 0 0 20px rgba(0, 255, 136, 0.3);
+            animation: titlePulse 2s ease-in-out infinite alternate;
+        }
+
+        @keyframes titlePulse {
+            from {
+                text-shadow: 0 0 20px rgba(0, 255, 136, 0.3);
+            }
+
+            to {
+                text-shadow: 0 0 30px rgba(0, 255, 136, 0.5);
+            }
+        }
+
+        h1::after {
+            content: '';
+            position: absolute;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 3px;
+            background: linear-gradient(90deg, transparent, var(--accent-color), transparent);
+            border-radius: 3px;
+        }
+
+        .highlight .league-name {
+            background: var(--gold-gradient);
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            font-size: 1.3rem;
+            text-shadow: 0 0 15px rgba(255, 215, 0, 0.3);
+        }
+
+        .highlight .bar {
+            background: var(--gold-gradient);
+        }
+
+        .highlight .stat {
+            border-left: 3px solid transparent;
+            background:
+                linear-gradient(var(--card-bg), var(--card-bg)) padding-box,
+                var(--gold-gradient) border-box;
+        }
+
+        .highlight .stat:hover {
+            transform: translateX(8px);
+            background: rgba(255, 215, 0, 0.05);
         }
 
         @media (max-width: 768px) {
@@ -270,6 +368,13 @@
 
             h1 {
                 font-size: 1.8rem;
+                padding: 0 15px;
+                margin: 20px 0;
+            }
+
+            h1::after {
+                width: 60px;
+                bottom: -8px;
             }
         }
     </style>
