--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -9,15 +9,17 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         :root {
-            --primary-color: #1a1a1a;
-            --secondary-color: #2196f3;
-            --background-dark: #121212;
-            --card-background: #1e1e1e;
-            --card-hover: #252525;
+            --primary-color: #6c5ce7;
+            --secondary-color: #a29bfe;
+            --background-dark: #0f0f13;
+            --card-bg: #1a1a23;
+            --card-hover: #22222c;
             --text-primary: #ffffff;
             --text-secondary: #b3b3b3;
-            --success-color: #4caf50;
-            --neon-green: #00ff00;
+            --success-color: #00ff88;
+            --accent-purple: #8B5CF6;
+            --accent-pink: #EC4899;
+            --neon-green: #00ff88;
         }
 
         * {
@@ -27,13 +29,30 @@
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
-            background-color: var(--background-dark);
+            font-family: 'Inter', sans-serif;
+            background: linear-gradient(135deg, var(--background-dark) 0%, #16161f 100%);
             color: var(--text-primary);
             margin: 0;
             padding: 30px;
             line-height: 1.6;
             min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: repeating-linear-gradient(45deg,
+                    transparent,
+                    transparent 20px,
+                    rgba(139, 92, 246, 0.03) 20px,
+                    rgba(139, 92, 246, 0.03) 40px);
+            z-index: -1;
         }
 
         .logo-container {
@@ -81,206 +100,216 @@
         .container {
             max-width: 1400px;
             margin: 0 auto;
-            display: flex;
+            display: grid;
+            grid-template-columns: 1fr auto 1fr;
             gap: 30px;
-            flex-wrap: wrap;
-            justify-content: space-between;
-            flex-direction: row;
-            /* Garante que playerA fique à esquerda e playerB à direita */
+            align-items: start;
+            position: relative;
+        }
+
+        .vs-circle {
+            width: 120px;
+            height: 120px;
+            background: #000;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 2.5rem;
+            font-weight: bold;
+            color: var(--text-primary);
+            position: relative;
+            margin: 0 auto;
+            border: 2px solid rgba(139, 92, 246, 0.3);
+            box-shadow: 0 0 30px rgba(139, 92, 246, 0.2);
+            z-index: 2;
+        }
+
+        .vs-circle::before {
+            content: '';
+            position: absolute;
+            inset: -2px;
+            border-radius: 50%;
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
+            z-index: -1;
+            animation: rotate 4s linear infinite;
+        }
+
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+
+            to {
+                transform: rotate(360deg);
+            }
         }
 
         .player-section {
-            flex: 1;
-            min-width: 300px;
-            background-color: var(--card-background);
-            border-radius: 15px;
+            background: rgba(26, 26, 35, 0.8);
+            border-radius: 20px;
             padding: 25px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            border: 1px solid var(--border-color);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(139, 92, 246, 0.1);
+            transition: all 0.3s ease;
         }
 
-        .metrics-section {
-            text-align: center;
-            margin-bottom: 30px;
-            background: var(--card-background);
-            border-radius: 15px;
-            padding: 20px;
+        .player-section:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(139, 92, 246, 0.1);
         }
 
-        .probability-section h3 {
-            color: var(--secondary-color);
-            margin-bottom: 30px;
+        .player-name {
             font-size: 1.8rem;
-            border-bottom: 2px solid var(--secondary-color);
-            padding-bottom: 10px;
+            font-weight: 700;
+            margin-bottom: 20px;
+            text-align: center;
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+        }
+
+        .probability-section {
+            margin: 40px 0;
+            text-align: center;
         }
 
         .probability-cards {
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            flex-wrap: wrap;
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 30px;
         }
 
         .probability-card {
-            background: var(--card-hover);
+            background: rgba(26, 26, 35, 0.8);
             padding: 25px;
             border-radius: 15px;
-            min-width: 200px;
-            flex: 1;
-            max-width: 300px;
-            border: 1px solid rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(139, 92, 246, 0.1);
             transition: all 0.3s ease;
         }
 
         .probability-card:hover {
             transform: translateY(-5px);
-            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-        }
-
-        .probability-card h4 {
-            color: var(--secondary-color);
-            margin-bottom: 15px;
-            font-size: 1.3rem;
+            box-shadow: 0 10px 30px rgba(139, 92, 246, 0.1);
         }
 
         .probability-value {
             font-size: 2.5rem;
-            color: var(--success-color);
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
             font-weight: bold;
             margin: 15px 0;
         }
 
-        .probability-card p {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
+        .stats-dots {
+            display: flex;
+            justify-content: center;
+            gap: 8px;
+            margin: 20px 0;
         }
 
-        .h2h-stat-card {
-            background: var(--card-hover);
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-            transition: transform 0.2s ease;
+        .stat-dot {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: var(--accent-purple);
+            opacity: 0.3;
+            transition: all 0.3s ease;
         }
 
-        .h2h-stat-card:hover {
-            transform: translateY(-5px);
+        .stat-dot.active {
+            opacity: 1;
+            transform: scale(1.2);
         }
 
-        .h2h-stat-card h4 {
-            color: var(--secondary-color);
-            margin-bottom: 10px;
-            font-size: 1.1rem;
+        .stat-dot.win {
+            background: var(--success-color);
         }
 
-        .h2h-stat-value {
-            font-size: 2rem;
-            color: var(--success-color);
-            font-weight: bold;
-            margin: 10px 0;
+        .stat-dot.draw {
+            background: var(--text-secondary);
         }
 
-        .h2h-stat-card p {
-            color: var(--text-secondary);
-            font-size: 0.9rem;
-            margin-top: 5px;
+        .stat-dot.loss {
+            background: var(--accent-pink);
+        }
+
+        .h2h-analysis {
+            background: rgba(26, 26, 35, 0.8);
+            border-radius: 20px;
+            padding: 30px;
+            margin: 40px 0;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(139, 92, 246, 0.1);
         }
 
         .h2h-stats-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
-            margin-top: 20px;
+            margin-top: 30px;
         }
 
-        .metrics-section h3 {
-            color: var(--secondary-color);
-            margin-bottom: 20px;
-            padding-bottom: 10px;
-            border-bottom: 1px solid var(--border-color);
-        }
-
-        .metrics-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-            gap: 15px;
-            margin-top: 15px;
-        }
-
-        .metric-item {
-            background: var(--card-hover);
-            padding: 15px;
-            border-radius: 10px;
-            transition: transform 0.2s;
-        }
-
-        .metric-item:hover {
-            transform: translateY(-2px);
-        }
-
-        .h2h-analysis {
-            background: var(--card-background);
-            border-radius: 15px;
+        .h2h-stat-card {
+            background: rgba(32, 32, 44, 0.8);
             padding: 20px;
-            margin: 20px 0;
-            border: 1px solid var(--border-color);
+            border-radius: 15px;
+            text-align: center;
+            transition: all 0.3s ease;
+            border: 1px solid rgba(139, 92, 246, 0.1);
+        }
+
+        .h2h-stat-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 30px rgba(139, 92, 246, 0.1);
+        }
+
+        .h2h-stat-value {
+            font-size: 2rem;
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
+            font-weight: bold;
+            margin: 10px 0;
         }
 
         .game-card {
-            background: var(--card-hover);
-            border-radius: 10px;
-            padding: 15px;
-            margin: 10px 0;
-            text-align: center;
-            border: 1px solid var(--border-color);
-            transition: transform 0.2s;
+            background: rgba(32, 32, 44, 0.8);
+            border-radius: 15px;
+            padding: 20px;
+            margin: 15px 0;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(139, 92, 246, 0.1);
+            transition: all 0.3s ease;
         }
 
         .game-card:hover {
-            transform: translateY(-2px);
-        }
-
-        .team {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 15px;
-            padding: 10px;
-        }
-
-        .team img {
-            width: 35px;
-            height: 35px;
-            border-radius: 50%;
-            border: 2px solid var(--secondary-color);
-        }
-
-        .team span {
-            font-size: 0.9rem;
-            color: var(--text-primary);
-        }
-
-        .highlight {
-            color: var(--success-color);
-            font-weight: 600;
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(139, 92, 246, 0.1);
         }
 
         .back-button {
-            background: var(--secondary-color);
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
             color: var(--text-primary);
             padding: 12px 30px;
             border-radius: 25px;
             border: none;
             cursor: pointer;
-            display: block;
-            margin: 20px auto;
+            font-weight: 600;
             transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 1px;
         }
 
         .back-button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(33, 150, 243, 0.3);
+            box-shadow: 0 5px 20px rgba(139, 92, 246, 0.3);
         }
 
         #h2hGames {
@@ -293,8 +322,19 @@
                 padding: 15px;
             }
 
-            .metrics-grid {
-                grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            .container {
+                grid-template-columns: 1fr;
+            }
+
+            .vs-circle {
+                width: 80px;
+                height: 80px;
+                font-size: 1.8rem;
+                margin: 20px auto;
+            }
+
+            .probability-cards {
+                grid-template-columns: 1fr;
             }
         }
     </style>
