--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -288,9 +288,10 @@
             border: 1px solid rgba(139, 92, 246, 0.1);
             transition: all 0.3s ease;
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: space-between;
             max-width: 400px;
+            gap: 8px;
         }
 
         .game-card:hover {
@@ -300,28 +301,31 @@
 
         .game-info {
             display: flex;
+            flex-direction: column;
             align-items: center;
-            gap: 12px;
+            gap: 8px;
+            width: 100%;
         }
 
         .team-vs {
             display: flex;
             align-items: center;
-            gap: 8px;
+            gap: 12px;
             font-size: 0.85rem;
         }
 
         .team-vs img {
-            width: 20px;
-            height: 20px;
+            width: 24px;
+            height: 24px;
             border-radius: 50%;
             object-fit: cover;
+            border: 1px solid rgba(139, 92, 246, 0.3);
         }
 
         .score-info {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: center;
             gap: 4px;
         }
 
@@ -814,10 +818,10 @@
                             <span>vs</span>
                             <img src="${game.awayImage}" alt="${game.away}">
                         </div>
-                    </div>
-                    <div class="score-info">
-                        <span class="score">${game.scoreHT} (${game.score})</span>
-                        <span class="date">${game.date}</span>
+                        <div class="score-info">
+                            <span class="score">${game.scoreHT} (${game.score})</span>
+                            <span class="date">${game.date}</span>
+                        </div>
                     </div>
                 </div>
             `).join('');
