--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -546,10 +546,11 @@
 
         .metrics-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             gap: 20px;
             margin: 20px auto;
-            max-width: 1200px;
+            max-width: 1400px;
+            padding: 0 20px;
         }
 
         .metrics-column {
@@ -559,67 +560,53 @@
             padding: 20px;
         }
 
-        .metrics-column h3 {
-            font-size: 1.1rem;
-            color: var(--text-primary);
-            margin-bottom: 15px;
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+        }
+
+        .h2h-stat-card {
+            background: rgba(32, 32, 44, 0.8);
+            padding: 15px;
+            border-radius: 10px;
             text-align: center;
-            border-bottom: 1px solid rgba(139, 92, 246, 0.2);
-            padding-bottom: 10px;
+        }
+
+        .h2h-stat-value {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: var(--accent-purple);
+            margin: 5px 0;
         }
 
         .confronto-resumo {
             text-align: center;
-            margin: 30px 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 15px;
+            margin: 20px auto;
+            max-width: 800px;
+            background: rgba(26, 26, 35, 0.8);
+            border-radius: 15px;
+            padding: 20px;
         }
 
         .confronto-stats {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            width: 100%;
-            max-width: 600px;
-            margin: 0 auto;
-            padding: 20px;
-            background: rgba(26, 26, 35, 0.8);
-            border-radius: 15px;
+            margin-bottom: 20px;
         }
 
         .stat-block {
+            flex: 1;
             text-align: center;
+            padding: 0 10px;
         }
 
         .stat-value {
-            font-size: 2.5rem;
+            font-size: 3rem;
             font-weight: bold;
             margin-bottom: 5px;
-        }
-
-        .stat-value.home {
-            color: #ff69b4;
-        }
-
-        .stat-value.draw {
-            color: #808080;
-        }
-
-        .stat-value.away {
-            color: #4169e1;
-        }
-
-        .stat-label {
-            font-size: 0.9rem;
-            color: var(--text-secondary);
-        }
-
-        .stat-detail {
-            font-size: 0.8rem;
-            color: #666;
-            margin-top: 2px;
+            line-height: 1;
         }
 
         .game-history {
@@ -627,29 +614,49 @@
             gap: 8px;
             justify-content: center;
             margin-top: 15px;
+            background: rgba(0, 0, 0, 0.2);
+            padding: 10px;
+            border-radius: 10px;
         }
 
         .history-dot {
-            width: 12px;
-            height: 12px;
+            width: 10px;
+            height: 10px;
             border-radius: 50%;
             transition: transform 0.2s;
         }
 
-        .history-dot.home {
-            background: #ff69b4;
+        .container {
+            max-width: 1400px;
+            margin: 30px auto;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 30px;
+            padding: 0 20px;
         }
 
-        .history-dot.draw {
-            background: #808080;
+        .player-section {
+            margin: 0;
         }
 
-        .history-dot.away {
-            background: #4169e1;
+        .metrics-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            gap: 10px;
         }
 
-        .history-dot:hover {
-            transform: scale(1.2);
+        .metric-item {
+            padding: 10px;
+        }
+
+        #h2hGames {
+            max-width: 1400px;
+            padding: 0 20px;
+        }
+
+        .game-card {
+            max-width: none;
+            margin: 10px 0;
         }
     </style>
 </head>
@@ -719,7 +726,8 @@
                 totalGoalsFT: 0,
                 winHome: 0,
                 winAway: 0,
-                draw: 0
+                draw: 0,
+                lastGames: lastGames
             };
 
             lastGames.forEach(game => {
@@ -755,26 +763,17 @@
         function renderProbabilities(h2hStats, playerAName, playerBName) {
             const container = document.getElementById('probabilityCards');
             const totalGames = h2hStats.totalGames;
-            const last10Games = Math.min(totalGames, 10);
 
             const homeWinPercent = ((h2hStats.winHome / totalGames) * 100).toFixed(1);
             const awayWinPercent = ((h2hStats.winAway / totalGames) * 100).toFixed(1);
             const drawPercent = ((h2hStats.draw / totalGames) * 100).toFixed(1);
-
-            // Criar array dos últimos 10 resultados (simulado)
-            const gameResults = [];
-            for (let i = 0; i < last10Games; i++) {
-                if (i < h2hStats.winHome) gameResults.push('home');
-                else if (i < h2hStats.winHome + h2hStats.draw) gameResults.push('draw');
-                else gameResults.push('away');
-            }
 
             const probabilityHTML = `
                 <div class="confronto-resumo">
                     <div class="confronto-stats">
                         <div class="stat-block">
                             <div class="stat-value home">${h2hStats.winHome}</div>
-                            <div class="stat-label">Vitórias</div>
+                            <div class="stat-label">${playerAName}</div>
                             <div class="stat-detail">${homeWinPercent}%</div>
                         </div>
                         <div class="stat-block">
@@ -784,19 +783,33 @@
                         </div>
                         <div class="stat-block">
                             <div class="stat-value away">${h2hStats.winAway}</div>
-                            <div class="stat-label">Vitórias</div>
+                            <div class="stat-label">${playerBName}</div>
                             <div class="stat-detail">${awayWinPercent}%</div>
                         </div>
                     </div>
                     <div class="game-history">
-                        ${gameResults.map(result => `
-                            <div class="history-dot ${result}"></div>
-                        `).join('')}
+                        ${generateGameHistory(h2hStats.lastGames, 10)}
                     </div>
                 </div>
             `;
 
             container.innerHTML = probabilityHTML;
+        }
+
+        function generateGameHistory(games, limit) {
+            const recentGames = games.slice(0, limit).reverse();
+            return recentGames.map(game => {
+                const [homeGoals, awayGoals] = game.score.split('-').map(Number);
+                let result;
+                if (homeGoals > awayGoals) {
+                    result = 'home';
+                } else if (awayGoals > homeGoals) {
+                    result = 'away';
+                } else {
+                    result = 'draw';
+                }
+                return `<div class="history-dot ${result}" title="${game.home} ${game.score} ${game.away}"></div>`;
+            }).join('');
         }
 
         function renderH2HAnalysis(stats) {
