--- a/h2h_analysis.html
+++ b/h2h_analysis.html
@@ -258,27 +258,32 @@
 
         .h2h-stat-card {
             background: rgba(32, 32, 44, 0.8);
-            padding: 20px;
+            padding: 25px;
             border-radius: 15px;
             text-align: center;
-            transition: all 0.3s ease;
-            border: 1px solid rgba(139, 92, 246, 0.1);
         }
 
-        .h2h-stat-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(139, 92, 246, 0.1);
+        .h2h-stat-card h4 {
+            font-size: 1.2rem;
+            color: var(--text-secondary);
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .h2h-stat-value {
-            font-size: 2.2rem;
+            font-size: 3rem;
             font-weight: bold;
-            color: var(--accent-purple);
-            margin: 10px 0;
             background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
             -webkit-background-clip: text;
             background-clip: text;
             color: transparent;
+            margin: 15px 0;
+        }
+
+        .h2h-stat-card p {
+            font-size: 1rem;
+            color: var(--text-secondary);
         }
 
         .game-card {
@@ -520,19 +525,6 @@
             border-bottom: 1px solid rgba(139, 92, 246, 0.2);
         }
 
-        .h2h-stat-card h4 {
-            font-size: 0.9rem;
-            color: var(--text-secondary);
-            margin-bottom: 10px;
-            text-transform: uppercase;
-            letter-spacing: 0.5px;
-        }
-
-        .h2h-stat-card p {
-            font-size: 0.8rem;
-            color: var(--text-secondary);
-        }
-
         .probability-card h4 {
             font-size: 1rem;
             color: var(--text-secondary);
@@ -566,24 +558,6 @@
             gap: 20px;
         }
 
-        .h2h-stat-card {
-            background: rgba(32, 32, 44, 0.8);
-            padding: 20px;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .h2h-stat-value {
-            font-size: 2.2rem;
-            font-weight: bold;
-            color: var(--accent-purple);
-            margin: 10px 0;
-            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-        }
-
         .confronto-resumo {
             text-align: center;
             margin: 20px auto;
@@ -607,21 +581,42 @@
             padding: 0 20px;
         }
 
-        .stat-value {
-            font-size: 3.5rem;
+        .stat-block .stat-label {
+            font-size: 1.2rem;
+            color: var(--text-primary);
+            margin: 10px 0;
+            font-weight: 500;
+        }
+
+        .stat-block .stat-detail {
+            font-size: 1rem;
+            background: linear-gradient(45deg, var(--accent-pink), var(--accent-purple));
+            -webkit-background-clip: text;
+            background-clip: text;
+            color: transparent;
             font-weight: bold;
-            margin-bottom: 10px;
-            line-height: 1;
+        }
+
+        .game-history-container {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .game-history-title {
+            font-size: 1.2rem;
+            color: var(--text-primary);
+            margin-bottom: 15px;
         }
 
         .game-history {
             display: flex;
             gap: 12px;
             justify-content: center;
-            margin-top: 20px;
             background: rgba(0, 0, 0, 0.2);
             padding: 15px;
             border-radius: 10px;
+            margin: 0 auto;
+            max-width: 600px;
         }
 
         .history-dot {
@@ -631,67 +626,18 @@
             transition: transform 0.2s;
         }
 
-        .history-dot.home {
-            background: #ff69b4;
-            box-shadow: 0 0 10px rgba(255, 105, 180, 0.5);
-        }
-
-        .history-dot.away {
-            background: #4169e1;
-            box-shadow: 0 0 10px rgba(65, 105, 225, 0.5);
-        }
-
-        .history-dot.draw {
-            background: #808080;
-            box-shadow: 0 0 10px rgba(128, 128, 128, 0.5);
-        }
-
-        .container {
-            max-width: 1400px;
-            margin: 30px auto;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 30px;
-            padding: 0 20px;
-        }
-
-        .player-section {
-            margin: 0;
-            padding: 25px;
-        }
-
-        .metrics-section {
-            background: rgba(26, 26, 35, 0.8);
-            border-radius: 15px;
-            padding: 25px;
-            margin-bottom: 30px;
-        }
-
-        .metrics-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
-            gap: 15px;
-        }
-
-        #h2hGames {
-            max-width: 1400px;
-            margin: 20px auto;
-            padding: 25px;
-        }
-
-        #h2hGamesList {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 20px;
+        .player-games-container {
+            max-width: 800px;
+            margin: 0 auto;
         }
 
         .game-card {
             background: rgba(32, 32, 44, 0.8);
             border-radius: 10px;
             padding: 15px;
-            margin: 0;
+            margin: 10px auto;
             width: 100%;
+            max-width: 600px;
         }
     </style>
 </head>
@@ -822,8 +768,11 @@
                             <div class="stat-detail">${awayWinPercent}%</div>
                         </div>
                     </div>
-                    <div class="game-history">
-                        ${generateGameHistory(h2hStats.lastGames, 10)}
+                    <div class="game-history-container">
+                        <div class="game-history-title">Últimos 10 Confrontos</div>
+                        <div class="game-history">
+                            ${generateGameHistory(h2hStats.lastGames, 10)}
+                        </div>
                     </div>
                 </div>
             `;
@@ -988,41 +937,16 @@
             container.innerHTML = metricsHTML + `<h3>Últimos Jogos de ${player.name}</h3>${gamesHTML}`;
         }
 
-        function renderH2HGames(games) {
+        function renderH2HGames(games, playerAName, playerBName) {
             const container = document.getElementById('h2hGamesList');
             const recentGames = games.slice(0, 10);
 
-            const gamesHTML = recentGames.map(game => {
-                const [homeGoals, awayGoals] = game.score.split('-').map(Number);
-                let resultClass;
-                if (homeGoals > awayGoals) {
-                    resultClass = 'home';
-                } else if (awayGoals > homeGoals) {
-                    resultClass = 'away';
-                } else {
-                    resultClass = 'draw';
-                }
-
-                return `
-                    <div class="game-card">
-                        <div class="game-info">
-                            <div class="team-vs">
-                                <img src="${game.homeImage}" alt="${game.home}">
-                                <span>vs</span>
-                                <img src="${game.awayImage}" alt="${game.away}">
-                            </div>
-                            <div class="score-info">
-                                <span class="score">${game.scoreHT} (${game.score})</span>
-                                <span class="date">${game.date}</span>
-                            </div>
-                        </div>
-                    </div>
-                `;
-            }).join('');
-
-            const dotsHTML = `
-                <div class="game-dots">
-                    ${recentGames.map(game => {
+            const gamesHTML = `
+                <div class="player-games-container">
+                    <div class="game-history-container">
+                        <div class="game-history-title">Histórico: ${playerAName} vs ${playerBName}</div>
+                        <div class="game-history">
+                            ${recentGames.map(game => {
                 const [homeGoals, awayGoals] = game.score.split('-').map(Number);
                 let resultClass;
                 if (homeGoals > awayGoals) {
@@ -1034,10 +958,27 @@
                 }
                 return `<div class="history-dot ${resultClass}" title="${game.home} ${game.score} ${game.away}"></div>`;
             }).join('')}
+                        </div>
+                    </div>
+                    ${recentGames.map(game => `
+                        <div class="game-card">
+                            <div class="game-info">
+                                <div class="team-vs">
+                                    <img src="${game.homeImage}" alt="${game.home}">
+                                    <span>vs</span>
+                                    <img src="${game.awayImage}" alt="${game.away}">
+                                </div>
+                                <div class="score-info">
+                                    <span class="score">${game.scoreHT} (${game.score})</span>
+                                    <span class="date">${game.date}</span>
+                                </div>
+                            </div>
+                        </div>
+                    `).join('')}
                 </div>
             `;
 
-            container.innerHTML = dotsHTML + gamesHTML;
+            container.innerHTML = gamesHTML;
         }
 
         // Inicialização
@@ -1074,7 +1015,7 @@
 
                 renderH2HAnalysis(h2hStats);
                 renderProbabilities(h2hStats, players.playerA.name, players.playerB.name);
-                renderH2HGames(data.mutualInfos.lastGames);
+                renderH2HGames(data.mutualInfos.lastGames, players.playerA.name, players.playerB.name);
             })
             .catch(error => {
                 console.error('Erro ao carregar dados:', error);
