--- a/players.html
+++ b/players.html
@@ -218,7 +218,7 @@
         <div id="playerAnalysisContainer"></div>
     </div>
 
-    <button onclick="window.location.href='results.html'" class="back-button">Voltar</button>
+    <button onclick="window.location.href='visualization.html'" class="back-button">Voltar</button>
 
     <script>
         // Verificar login
